--- a/mean_project/package.json
+++ b/mean_project/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongodb": "^6.6.0",
     "mongoose": "^8.3.3",
